[gd_scene load_steps=16 format=3 uid="uid://tdyvrjhv6gex"]

[ext_resource type="PackedScene" uid="uid://bcny23ongutou" path="res://Gameplay.tscn" id="1_u67pp"]
[ext_resource type="AudioStream" uid="uid://bot7k5apm0vns" path="res://sound/background.mp3" id="2_hjxmo"]
[ext_resource type="FontFile" uid="uid://dv6u3fwaxxeq3" path="res://assets/fonts/Peace Sans.otf" id="3_gsjt0"]
[ext_resource type="Texture2D" uid="uid://damhvowqw67pp" path="res://assets/background_images/color.jpg" id="3_ws5qm"]
[ext_resource type="Script" path="res://2024.gd" id="4_opli2"]
[ext_resource type="Texture2D" uid="uid://brs7u1w26di4t" path="res://assets/background_images/united-states-of-america.png" id="6_j3c66"]
[ext_resource type="FontFile" uid="uid://d1fjic4rc40th" path="res://assets/fonts/Chiki-MVRZw.otf" id="9_oseho"]

[sub_resource type="GDScript" id="GDScript_k7ogn"]
script/source = "extends Node2D
@export var gameplay = PackedScene
var title_front : RichTextLabel
var title_back : RichTextLabel
var title_text : String = \"The political\"
var current_length : int = 0
var timer_delay : float = 0.025
# Called when the node enters the scene tree fbuttor the first time.
func _ready():
	title_front = $title/title_front
	title_front.text = \"\"
	
	title_back = $title/title_shadow
	title_back.text = \"\"
	$Timer.wait_time = 0.4
	$Timer.start()
	pass

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass

func _on_play_pressed():
	get_tree().change_scene_to_packed(gameplay)

func _on_timer_timeout():
	# Check if the entire title is displayed
	if current_length < title_text.length():
		var character = title_text[current_length]
		title_front.text += title_text[current_length]
		title_back.text += title_text[current_length]
		current_length += 1
		title_front.text = \"[center]%s[/center]\"%title_front.text
		title_back.text = \"[center]%s[/center]\"%title_back.text
		$Timer.wait_time = timer_delay
		$Timer.start()
	else:
		# Stop the timer once the entire title is displayed
		$Timer.stop()
"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xdh4d"]
bg_color = Color(0.752941, 0.227451, 0.168627, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="ViewportTexture" id="ViewportTexture_w5ah7"]

[sub_resource type="Animation" id="Animation_urkq2"]
resource_name = "Btn_Animation"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(692, 793), Vector2(692, 800), Vector2(692, 793)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_okyvh"]
_data = {
"Btn_Animation": SubResource("Animation_urkq2")
}

[sub_resource type="Animation" id="Animation_dkwtv"]
resource_name = "loop"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../24:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1407, 219), Vector2(1420, 230), Vector2(1407, 219)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(258, 202), Vector2(248, 210), Vector2(258, 202)]
}

[sub_resource type="Animation" id="Animation_578o5"]
resource_name = "pop_up"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 3.605, 0.000911164),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.3, 1.3), Vector2(1.1, 1.1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-1.5708, 0.0, -0.23911]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../24:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.3, 1.3), Vector2(1.1, 1.1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../24:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.5708, 0.0, 0.23911]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ty0ii"]
_data = {
"loop": SubResource("Animation_dkwtv"),
"pop_up": SubResource("Animation_578o5")
}

[node name="MainMenu" type="Node2D"]
script = SubResource("GDScript_k7ogn")
gameplay = ExtResource("1_u67pp")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_hjxmo")
volume_db = -9.35
pitch_scale = 1.89
autoplay = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.025

[node name="background" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1080.0
offset_bottom = 1920.0
grow_horizontal = 2
grow_vertical = 2

[node name="color" type="TextureRect" parent="background"]
modulate = Color(1, 0.85098, 0.752941, 1)
layout_mode = 0
offset_left = -3.0
offset_top = -6.0
offset_right = 1919.0
offset_bottom = 1075.0
texture = ExtResource("3_ws5qm")
expand_mode = 1

[node name="Play" type="Button" parent="."]
offset_left = 692.0
offset_top = 794.4
offset_right = 1201.0
offset_bottom = 953.4
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_xdh4d")
theme_override_styles/hover = SubResource("StyleBoxFlat_xdh4d")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xdh4d")
theme_override_styles/focus = SubResource("StyleBoxFlat_xdh4d")
text = "Play"
icon = SubResource("ViewportTexture_w5ah7")

[node name="ButtonAnimation" type="AnimationPlayer" parent="Play"]
libraries = {
"": SubResource("AnimationLibrary_okyvh")
}
autoplay = "Btn_Animation"

[node name="title" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="title_shadow" type="RichTextLabel" parent="title"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 338.0
offset_top = 578.0
offset_right = 1546.0
offset_bottom = 749.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.752941, 0.227451, 0.168627, 0.176471)
theme_override_fonts/normal_font = ExtResource("9_oseho")
theme_override_font_sizes/normal_font_size = 210
theme_override_font_sizes/bold_font_size = 0
bbcode_enabled = true
text = "The Political"
fit_content = true

[node name="_VScrollBar_2" type="VScrollBar" parent="title/title_shadow"]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
max_value = 422.0
step = 1.0
page = 422.0

[node name="title_front" type="RichTextLabel" parent="title"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 326.0
offset_top = 562.0
offset_right = 1533.0
offset_bottom = 733.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.752941, 0.227451, 0.168627, 1)
theme_override_fonts/normal_font = ExtResource("9_oseho")
theme_override_font_sizes/normal_font_size = 210
theme_override_font_sizes/bold_font_size = 0
bbcode_enabled = true
text = "The Political"
fit_content = true

[node name="_VScrollBar_3" type="VScrollBar" parent="title/title_front"]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
max_value = 422.0
step = 1.0
page = 422.0

[node name="2024" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 843.0
offset_bottom = 360.0
script = ExtResource("4_opli2")

[node name="24" type="RichTextLabel" parent="2024"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.909
anchor_top = 0.45
anchor_right = 1.909
anchor_bottom = 0.45
offset_left = -197.553
offset_top = 61.0059
offset_right = 94.4474
offset_bottom = 3.92616e+07
grow_horizontal = 0
rotation = 0.23911
scale = Vector2(1.1, 1.1)
theme_override_colors/default_color = Color(0.752941, 0.227451, 0.168627, 1)
theme_override_fonts/normal_font = ExtResource("3_gsjt0")
theme_override_font_sizes/normal_font_size = 196
text = "24
"
fit_content = true

[node name="20" type="RichTextLabel" parent="2024"]
layout_mode = 1
offset_left = 254.358
offset_top = 204.913
offset_right = 588.371
offset_bottom = 477.913
rotation = -0.23911
scale = Vector2(1.1, 1.1)
pivot_offset = Vector2(330, 0)
theme_override_colors/default_color = Color(0.752941, 0.227451, 0.168627, 1)
theme_override_fonts/normal_font = ExtResource("3_gsjt0")
theme_override_font_sizes/normal_font_size = 196
text = "20
"
fit_content = true

[node name="text_animation" type="AnimationPlayer" parent="2024"]
root_node = NodePath("../20")
libraries = {
"": SubResource("AnimationLibrary_ty0ii")
}
autoplay = "pop_up"

[node name="United-states-of-america" type="Sprite2D" parent="."]
position = Vector2(964, 274)
scale = Vector2(1.45117, 1.32031)
texture = ExtResource("6_j3c66")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="animation_finished" from="2024/text_animation" to="2024" method="_on_text_animation_animation_finished"]
